--- a/normal.html
+++ b/normal.html
@@ -13,8 +13,9 @@
 
 
     .input {
-      padding:15px;
-      width:200px;
+    padding:15px;
+    padding-bottom:20px;
+    width:200px;
     border:1px dashed gray;
     margin:5px;
     }
