--- a/normal.html
+++ b/normal.html
@@ -351,7 +351,7 @@ Where:<br>
           S = Channel Slope, (ft/ft)<br><br>
 
 Under the assumption of uniform flow conditions the bottom slope is the same as  the slope of the energy grade line and the water surface slope. The Manning’s n is a coefficient which represents the roughness or friction applied to the flow by the channel.   Manning’s n-values are often selected from tables, but can be back calculated from field measurements. In many flow conditions the selection of a Manning’s roughness coefficient can greatly affect computational results.<hr>
-<p><strong>Instructions:</strong> Select variable to solve, adjust slider bars, click on graph to modify the cross section. CSV cross section data can be loaded in the input box below.</p>
+<p><strong>Instructions:</strong> Select variable to solve, adjust slider bars, click on graph to modify the cross section. CSV cross section data can be loaded in the input box below. This online calculator is for demonstration and educational purposes only.</p>
     <div id='leftCol'>
       <div class = 'input'>Solve For:
         <select id = "solvetype">
